fixed error and add overflow hide

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 #main-navbar {
   background-color: blue;
+  overflow: hidden;
 }
 #navbar-container {
+  float: left;
   width: 100%;
   position: relative;
 }
@@ -10,4 +12,5 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
 }
